objects/PHSS_TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PHSS_TriggerSettings</description>
    <fields>
        <fullName>AccountTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the AccountTrigger is disabled.</description>
        <inlineHelpText>When checked, the AccountTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>AccountTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCOrderItemTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the CCOrderItemTrigger is disabled</description>
        <inlineHelpText>When checked, the CCOrderItemTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>CCOrderItemTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CertificationProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ContactTrigger is disabled</description>
        <inlineHelpText>When checked, the ContactTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>ContactTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentVersionDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Version Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Fulfillment Trigger is disabled.</description>
        <inlineHelpText>When checked, the Fulfillment Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>Fulfillment Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILTRosterTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ILTRosterTrigger is disabled</description>
        <inlineHelpText>When checked, the ILTRosterTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>ILTRosterTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHSSinitQRCodeIdentifierDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
        <inlineHelpText>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>PHSS_initQRCodeIdentifier Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceListItemTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceListItemTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the UserTrigger is disabled.</description>
        <inlineHelpText>When checked, the UserTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>UserTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VoucherTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VoucherTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedJobtoILTClassTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedJobtoILTClassTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedLocationtoILTLocationTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedLocationtoILTLocationTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedResourcetoILTInstructTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedResourcetoILTInstructTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trgr_Channel_Compensation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the trgr_Channel_Compensation Trigger is disabled.</description>
        <inlineHelpText>When checked, the trgr_Channel_Compensation Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>trgr_Channel_Compensation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>PHSS Trigger Settings</label>
</CustomObject>